--- a/website/css/playground.css
+++ b/website/css/playground.css
@@ -65,7 +65,7 @@
   color: #fff;
 }
 .example-list li.active {
-  background: rgba(108, 92, 231, 0.2);
+  background: rgba(255, 255, 255, 0.12);
   color: #fff;
 }
 
@@ -105,7 +105,7 @@
   color: white;
 }
 .toolbar-btn.run:hover {
-  background: #5b4bd5;
+  background: #333;
 }
 
 .toolbar-size {
